--- a/text/nav_after_login.html
+++ b/text/nav_after_login.html
@@ -2,7 +2,7 @@
     <div class="container-fluid">
         <a class="navbar-brand" href="#">
             <img src="../images/hikeLogo.png" height="36">
-            HoCa Hikes</a>
+            Jiahong Hikes</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
             data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
             aria-label="Toggle navigation">
