--- a/eachHike.html
+++ b/eachHike.html
@@ -18,7 +18,7 @@
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous">
-        </script>
+    </script>
 
     <!-------------------------------------------------------->
     <!-- Firebase 8 Library related CSS, JS, JQuery go here -->
@@ -48,39 +48,11 @@
 
     <!-- the body of your page goes here -->
     <!-- stuff -->
-    <div class="container-fluid bg-light text-dark p-5">
-        <div class="container bg-light p-5">
-            <h1 class="display-4">Good morning, <span id="name-goes-here"></span></h1>
-            <hr>
-            <p>Quote of the day: <span id="quote-goes-here"></span></p>
-        </div>
-    </div>
-
     <div class="container">
-        <h1>Some popular hikes</h1>
-        <!-- Here is the container for cards  -->
-        <div class="container">
-            <div id="hikes-go-here" class="row row-cols-auto">
-                <!-- Templates for general use, not displayed -->
-                <template id="hikeCardTemplate">
-                    <div class="card py-2 mx-2" style="width: 18rem">
-                        <img class="card-image card-img-top" src=" ..." alt="..." />
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-length">placeholder</p>
-                            <br />
-                            <p class="card-text">
-                                Some quick example text to build on the card title and make up the
-                                bulk of the card's content.
-                            </p>
-                            <a class="btn btn-primary card-href">Read more ...</a>
-                        </div>
-                    </div>
-                </template>
-            </div>
-        </div>
-    </div>
-
+        <h1><span id="hikeName"> this hike</span></h1>
+        <img class="hike-img responsive" src=""/>
+        <div id="details-go-here"></div>
+  </div>
 
     <!-- our own footer goes here-->
     <nav id="footerPlaceholder"></nav>
@@ -90,7 +62,7 @@
     <!---------------------------------------------->
     <script src="./scripts/firebaseAPI_TEAM99.js"></script>
     <script src="./scripts/skeleton.js"></script>
-    <script src="./scripts/main.js"></script>
+    <script src="./scripts/eachHike.js"></script>
     <!-- <script src="./scripts/script.js"></script> -->
 
 </body>
